@@ -1,6 +1,7 @@
 package com.microsoft.openai.samples.assistant.business.service;
 
 import com.microsoft.openai.samples.assistant.business.models.Account;
+import com.microsoft.openai.samples.assistant.business.models.PaymentMethodSummary;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
@@ -10,7 +11,7 @@ import java.util.*;
 public class UserService {
 
 
-    private Map<String, Account> accounts = new HashMap<>();
+    private final Map<String, Account> accounts = new HashMap<>();
 
     public UserService() {
         accounts.put(
@@ -22,7 +23,10 @@ public class UserService {
                         "MXN",
                         "2021-03-15",
                         "125000",
-                        null
+                        List.of(
+                                new PaymentMethodSummary("12345", "Tarjeta Visa", "2021-03-15", "2025-03-15"),
+                                new PaymentMethodSummary("23456", "Transferencia bancaria", "2021-03-15", "9999-12-31")
+                        )
                 )
         );
         accounts.put(
@@ -34,7 +38,10 @@ public class UserService {
                         "COP",
                         "2020-07-01",
                         "8400000",
-                        null
+                        List.of(
+                                new PaymentMethodSummary("345678", "Transferencia bancaria", "2020-07-01", "9999-12-31"),
+                                new PaymentMethodSummary("55555", "Tarjeta Visa", "2020-07-01", "2026-07-01")
+                        )
                 )
         );
         accounts.put(
@@ -46,13 +53,19 @@ public class UserService {
                         "CLP",
                         "2022-05-10",
                         "2750000",
-                        null
+                        List.of(
+                                new PaymentMethodSummary("46748576", "Débito automático", "2022-05-10", "9999-12-31")
+                        )
                 )
         );
 
      }
     public List<Account> getAccountsByUserName(String userName) {
-        return Arrays.asList(accounts.get(userName));
+        Account account = accounts.get(userName);
+        if (account == null) {
+            return List.of();
+        }
+        return List.of(account);
     }
 
 
